--- a/public/style.css
+++ b/public/style.css
@@ -1,94 +1,175 @@
-@mixin vertical-align {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+/*******************/
+/*     Buttons     */
+/*******************/
+
+.button {
+    padding: 10px 45px;
+    font-size: 20px;
+    color: black;
+    background-color: #3385ff;
+    border: 2px solid #002966;
+    border-radius: 3px;
+    position: fixed;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
 }
+
+.button:hover {
+    background-color: #b3d1ff;
+    border: 2px solid #0047b3;
+}
+
+
+
+/**********************/
+/*     User Input     */
+/**********************/
+
+.inputArea1 {
+    text-align: center;
+    width: 380px;
+    height: 50px;
+    padding: 5px 10px;
+    background-color: #80b3ff;
+    border: 2px solid #002966;
+    font-size: 22px;
+    position: fixed;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+}
+
+.inputArea2 {
+    border-radius: 3px;
+    background-color: #80b3ff;
+    border: 2px solid #002966;
+    resize: none;
+    font-size: 16px;
+}
+
+
+/*******************************/
+/*     Log-In Area Styling     */
+/*******************************/
+
+#loginArea {
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#loginMessage {
+    font-size: 30px;
+}
+
+
+/***********************/
+/*     Chat Styling    */
+/***********************/
+
+.chatMessage {
+    font-size: 16px;
+    padding-top: 12px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    background-color: #80b3ff;
+    border: 2px solid #002966;
+    border-radius: 5px;
+    width: 97%;
+}
+
+.chatMessage:hover {
+    background-color: #9f9fdf;
+    border: 2px solid #3939ac;
+}
+
+.systemMessage {
+    font-size: 16px;
+    padding-top: 12px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    background-color: #cce6ff;
+    border: 1px dashed #80bfff;
+    border-radius: 5px;
+    width: 97%;
+}
+
+.systemMessage:hover {
+    background-color: #e6f2ff;
+    border: 1px dashed #b3d7ff;
+}
+
+.userList {
+    font-size: 16px;
+    padding-left: 15px;
+    padding-bottom: 15px;
+    background-color: #b3d1ff;
+    border-bottom: 2px solid #80b3ff;
+}
+
+.customForm {
+    padding-left: 15px;
+}
+
+#chatroomHeader {
+    border-radius: 5px;
+    border: 2px solid #80b3ff;
+    background-color: #b3d1ff;
+}
+
+#chat {
+    padding-left: 20px;
+    height: 50vh;
+    overflow-y: scroll;
+    border-radius: 5px;
+    border: 2px solid #80b3ff;
+    background-color: #b3d1ff;
+}
+
+
+
+/*****************************/
+/*     Chat's Scroll Bar     */
+/*****************************/
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background: #cce0ff;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #003380;
+    border-radius: 3px;
+}
+
+
+
+/***************************/
+/*     Overall Styling     */
+/***************************/
 
 * {
-    box-sizing: border-box;
+    font-family: arial;
 }
 
-html {
-    height: 100%;
+hr {
+    border: 1px solid #002966;
+}
+
+p {
+    font-size: 16px;
+}
+
+label {
+    font-size: 16px;
 }
 
 body {
-    margin: 0px;
-    height: 100%;
-}
-
-header {
-    text-align: center;
-}
-
-h1 {
-    font-family: 'Comfortaa', sans-serif;
-    margin: 0px;
-}
-
-div#change_username, section#input_zone {
-    border: 5px outset #8258FA;
-}
-
-div#change_username {
-    height: 3%;
-    display: inline-block;
-    background-color: #BCA9F5;
-}
-
-section#chatroom {
-    border: 5px inset #8258FA;
-    height: 85%;
-    overflow: auto;
-}
-
-section#input_zone {
-    height: 7%;
-    text-align: center;
-    background-color: #BCA9F5;
-}
-
-.vertical-align {
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-input#username {
-    font-family: 'Comfortaa', sans-serif;
-}
-
-input#message {
-    display: inline-block;
-    width: 88%;
-    height: 70%;
-    font-family: 'Comfortaa', sans-serif;
-    font-size: 2vh;
-}
-
-button#send_message {
-    display: inline-block;
-    height: 70%;
-    width: 10%;
-}
-
-p.message {
-    margin: 0px;
-    width: 100%;
-    height: 40px;
-    font-size: 2vh;
-    font-family: 'Comfortaa', sans-serif;
-    padding: 1vh;
-}
-
-.message:nth-child(even) {
-    background-color: #81DAF5;
-}
-
-.message:nth-child(odd) {
-    background-color: #81BEF7;
+    background-color: #cce0ff;
 }
